[package]
authors = ["Jan Keith Certeza Darunday <jkdarunday@freedom.tm>"]
name = "hadamard"
version = "0.1.0"

[dependencies]
bincode = "0.9.2"
chrono = {version = "0.4.0", features=["serde"]}
crypto = "0.0.2"
serde = "1.0.16"
serde_derive = "1.0.16"
sha2 = "0.6.0"
time = "0.1.38"

[dependencies.uuid]
features = ["v4"]
version = "0.5.1"
